docs/pages/versions/v53.0.0/sdk/fingerprint.mdx
---
title: Expo 指纹
sidebar_title: 指纹
description: 一个用于从 React Native 项目生成指纹的库。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-53/packages/@expo/fingerprint'
packageName: '@expo/fingerprint'
iconUrl: '/static/images/packages/expo-fingerprint.png'
platforms: ['node']
isNew: true
---

import APISection from '~/components/plugins/APISection';
import { Collapsible } from '~/ui/components/Collapsible';
import { Terminal } from '~/ui/components/Snippet';
import { CODE } from '~/ui/components/Text';

`@expo/fingerprint` 提供了一个 API，用于生成你的项目指纹（哈希），以便用于判断应用的原生层和 JavaScript 层之间的兼容性。哈希计算是可配置的，但默认情况下会通过对应用依赖项、自定义原生代码、原生项目文件和配置进行哈希处理来生成。

## 安装

`@expo/fingerprint` 默认随 [`expo`](expo.mdx) 和 [`expo-updates`](updates.mdx) 一起包含。

如果你希望将 `@expo/fingerprint` 作为独立包使用，可以运行以下命令进行安装：

<Terminal cmd={['$ npx expo install @expo/fingerprint']} />

## CLI 用法

<Terminal cmd={['$ npx @expo/fingerprint --help']} />

## 配置

`@expo/fingerprint` 提供了适用于大多数项目的默认配置，但也提供了几种方式来自定义指纹生成过程，使其更适合你的应用结构和工作流程。

### .fingerprintignore

放置在项目根目录中的 **.fingerprintignore** 是一种类似 [**.gitignore**](https://git-scm.com/docs/gitignore#_pattern_format) 的忽略机制，用于排除不参与哈希计算的文件。所有模式路径都相对于项目根目录。它的行为类似，但实际上使用 `minimatch` 进行模式匹配，这有一些 [限制](#limitations)（有关 [Options](#options) 下 `ignorePaths` 的说明请参见文档）。

下面是一个 **.fingerprintignore** 配置示例：

```ignore .fingerprintignore
# 忽略整个 android 目录
android/**/*

# 忽略整个 ios 目录，但仍保留 ios/Podfile 和 ios/Podfile.lock
ios/**/*
!ios/Podfile
!ios/Podfile.lock

# 忽略 node_modules 中的特定包
node_modules/some-package/**/*

# 与上面相同，但作用范围更广，因为包可能嵌套存在
**/node_modules/some-package/**/*
```

### fingerprint.config.js

放置在项目根目录中的 **fingerprint.config.js** 允许你在 **.fingerprintignore** 可配置的范围之外，指定自定义的哈希计算配置。有关受支持的配置，请参见 [Config](#config) 和 [`SourceSkips`](#sourceskips)。

下面是一个 **fingerprint.config.js** 配置示例，假设你已将 `@expo/fingerprint` 作为直接依赖安装：

```js fingerprint.config.js
/** @type {import('@expo/fingerprint').Config} */
const config = {
  sourceSkips: [
    'ExpoConfigRuntimeVersionIfString',
    'ExpoConfigVersions',
    'PackageJsonAndroidAndIosScriptsIfNotContainRun',
  ],
};
module.exports = config;
```

如果你通过 `expo` 使用 `@expo/fingerprint`（此时 `@expo/fingerprint` 作为传递依赖安装），你可以从 `expo/fingerprint` 导入 fingerprint：

```js
/** @type {import('expo/fingerprint').Config} */
```

<Collapsible summary="高级：在指纹哈希之前自定义源码">

在某些情况下，你可能希望在生成指纹之前自定义源码。例如：

- 你想从应用配置中移除敏感数据。
- 你想稳定应用配置中的动态值。
- 你想将文件哈希转换为稳定值。

为此，你可以在 **fingerprint.config.js** 文件中使用 `fileHookTransform` 选项，在哈希之前转换源码。了解更多关于 [`fileHookTransform` 选项](#filehooktransformfunctionsource-chunk-isendoffile-encoding) 的信息。

```js fingerprint.config.js
const assert = require('node:assert');

const fileChunkMap = {};

/** @type {import('@expo/fingerprint').Config} */
const config = {
  fileHookTransform: (source, chunk, isEndOfFile, encoding) => {
    // 从应用配置中移除 "updates" 部分
    if (source.type === 'contents' && source.id === 'expoConfig') {
      assert(isEndOfFile, 'contents source is expected to have single chunk.');
      const config = JSON.parse(chunk);
      delete config.updates;
      return JSON.stringify(config);
    }

    // 将内容源转换为空字符串
    if (source.type === 'contents' && source.id === 'packageJson:scripts') {
      return '';
    }

    // 通过替换动态值来转换文件源
    if (source.type === 'file' && source.filePath === 'eas.json') {
      return chunk.toString().replace(/MyApp-Dev/g, 'MyApp');
    }

    // 转换一个分多块处理的大文件
    // 要获取完整文件，需要缓存所有块并一次性返回
    if (source.type === 'file' && source.filePath === 'assets/large-image.jpg') {
      let receivedBuffer = fileChunkMap[source.filePath] ?? Buffer.alloc(0);
      if (chunk != null) {
        const buffer = typeof chunk === 'string' ? Buffer.from(chunk, encoding) : chunk;
        receivedBuffer = Buffer.concat([receivedBuffer, buffer]);
        fileChunkMap[source.filePath] = receivedBuffer;
      }
      if (!isEndOfFile) {
        return null;
      }
      fileChunkMap[source.filePath] = null;
      // 完整载荷可在此处获取，你可以根据需要进行转换。
      receivedBuffer = receivedBuffer.toString().replace(/SensitiveData/g, 'StableData');
      return receivedBuffer;
    }

    // 对于其他源，直接返回 chunk
    return chunk;
  },
};

module.exports = config;
```

</Collapsible>

## 限制

<Collapsible summary={<>对 <CODE>@expo/config-plugins</CODE> 原始函数的支持有限</>}>

在使用带有原始函数的配置插件时，必须注意某些限制，尤其是在指纹生成的上下文中。该库会尽最大努力为通过配置插件所做的更改生成指纹；然而，原始函数带来了特定挑战。原始函数无法作为指纹被序列化，这意味着它们不能直接用于生成唯一哈希。

为了解决这一限制，库会采用以下策略之一为原始函数创建可序列化的指纹：

1. 使用 `Function.name`：对于具名的原始函数，如果可用，库会使用 `Function.name` 属性。该属性会提供函数一个可识别的名称，可作为指纹属性使用。

2. 使用 `withAnonymous`：对于没有 `Function.name` 的匿名原始函数，库会改用 `withAnonymous` 作为指纹属性。这是匿名函数的通用标识符。

下面是一个示例，用于说明库将在何种情况下使用 [`withMyPlugin`, `withAnonymous`] 作为插件属性来进行指纹哈希：

{/* prettier-ignore */}
```js app.config.js
const { withInfoPlist } = require('expo/config-plugins');

const withMyPlugin = (config) => {
  return withInfoPlist(config, (config) => {
    config.modResults.NSLocationWhenInUseUsageDescription = 'Allow $(PRODUCT_NAME) to use your location';
    return config;
  });
};

export default ({ config }) => {
  config.plugins ||= [];
  config.plugins.push(withMyPlugin);
  config.plugins.push((config) => config);
  return config;
};
```

需要注意的是，由于这种设计，如果你对原始配置插件函数的实现进行更改，例如修改 `withMyPlugin` 中的 **Info.plist** 值，指纹仍然会生成相同的哈希值。为了在修改配置插件实现时确保指纹唯一，请考虑以下选项：

- 避免匿名函数：避免使用匿名的原始配置插件函数。相反，尽可能使用具名函数，并确保只要实现发生变化，其名称也保持一致。

- 使用本地配置插件：或者，你可以将本地配置插件作为独立模块创建，每个模块都有自己的导出。这种方式允许你在修改配置插件实现时指定不同的函数名。

下面是一个使用本地配置插件的示例：

```js ./plugins/withMyPlugin.js
const { withInfoPlist } = require('expo/config-plugins');

const withMyPlugin = config => {
  return withInfoPlist(config, config => {
    config.modResults.NSLocationWhenInUseUsageDescription =
      'Allow $(PRODUCT_NAME) to use your location';
    return config;
  });
};

module.exports = withMyPlugin;
```

{/* prettier-ignore */}
```json app.json
{
  "expo": {
    /* @hide ... */ /* @end */
    "plugins": "./plugins/withMyPlugin"
  }
}
```

遵循这些准则后，你可以有效管理对配置插件的更改，并确保指纹生成保持一致且可靠。

</Collapsible>

## API

```ts
import * as Fingerprint from '@expo/fingerprint';
```

<APISection packageName="@expo/fingerprint" apiName="Fingerprint" />
