docs/pages/versions/v56.0.0/sdk/fingerprint.mdx
---
title: Expo 指纹
sidebar_title: 指纹
description: 一个用于从 React Native 项目生成指纹的库。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-56/packages/@expo/fingerprint'
packageName: '@expo/fingerprint'
iconUrl: '/static/images/packages/expo-fingerprint.png'
platforms: ['node']
---

import APISection from '~/components/plugins/APISection';
import { Collapsible } from '~/ui/components/Collapsible';
import { Terminal } from '~/ui/components/Snippet';
import { CODE } from '~/ui/components/Text';

`@expo/fingerprint` 提供了一个 API，用于为你的项目生成一个指纹（哈希），以便判断应用的原生层和 JavaScript 层之间的兼容性。哈希计算是可配置的，但默认会通过对应用依赖、定制原生代码、原生项目文件以及配置进行哈希计算来得出。

## 安装

`@expo/fingerprint` 默认包含在 [`expo`](expo.mdx) 和 [`expo-updates`](updates.mdx) 中。

如果你希望将 `@expo/fingerprint` 作为独立包使用，可以通过运行以下命令进行安装：

<Terminal
  cmd={{
    npm: ['$ npx expo install @expo/fingerprint'],
    yarn: ['$ yarn expo install @expo/fingerprint'],
    pnpm: ['$ pnpm expo install @expo/fingerprint'],
    bun: ['$ bun expo install @expo/fingerprint'],
  }}
/>

## CLI 用法

<Terminal
  cmd={{
    npm: ['$ npx @expo/fingerprint --help'],
    yarn: ['$ yarn dlx @expo/fingerprint --help'],
    pnpm: ['$ pnpm dlx @expo/fingerprint --help'],
    bun: ['$ bunx @expo/fingerprint --help'],
  }}
/>

## 配置

`@expo/fingerprint` 提供了适用于大多数项目的默认设置，但也提供了几种方式来配置指纹生成流程，以更好地适配你的应用结构和工作流。

### .fingerprintignore

放置在项目根目录中的 **.fingerprintignore** 是一种类似 [**.gitignore**](https://git-scm.com/docs/gitignore#_pattern_format) 的忽略机制，用于将文件排除在哈希计算之外。所有模式路径都相对于项目根目录。它的行为类似，但使用 `minimatch` 进行模式匹配，并且有一些[限制](#limitations)（参见 [Options](#options) 下 `ignorePaths` 的文档）。

下面是一个 **.fingerprintignore** 配置示例：

```ignore .fingerprintignore
# 忽略整个 android 目录
android/**/*

# 忽略整个 ios 目录，但仍保留 ios/Podfile 和 ios/Podfile.lock
ios/**/*
!ios/Podfile
!ios/Podfile.lock

# 忽略 node_modules 中的特定包
node_modules/some-package/**/*

# 与上面相同，但作用范围更广，因为包可能嵌套存在
**/node_modules/some-package/**/*
```

### fingerprint.config.js

放置在项目根目录中的 **fingerprint.config.js** 允许你在 **.fingerprintignore** 可配置内容之外，指定自定义的哈希计算配置。支持的配置项请参见 [Config](#config) 和 [`SourceSkips`](#sourceskips)。

下面是一个 **fingerprint.config.js** 配置示例，假设你已将 `@expo/fingerprint` 作为直接依赖安装：

```js fingerprint.config.js
/** @type {import('@expo/fingerprint').Config} */
const config = {
  sourceSkips: [
    'ExpoConfigRuntimeVersionIfString',
    'ExpoConfigVersions',
    'PackageJsonAndroidAndIosScriptsIfNotContainRun',
  ],
};
module.exports = config;
```

如果你是通过 `expo` 使用 `@expo/fingerprint`（此时 `@expo/fingerprint` 是作为传递依赖安装的），你可以从 `expo/fingerprint` 导入 fingerprint：

```js
/** @type {import('expo/fingerprint').Config} */
```

<Collapsible summary="高级：在指纹哈希之前自定义源">

在某些情况下，你可能希望在进行指纹处理之前自定义源。例如：

- 你希望从应用配置中移除敏感数据。
- 你希望稳定应用配置中的动态值。
- 你希望将文件哈希转换为稳定值。

为此，你可以在 **fingerprint.config.js** 文件中使用 `fileHookTransform` 选项，在哈希之前转换源。了解更多关于 [`fileHookTransform` option](#filehooktransformfunctionsource-chunk-isendoffile-encoding) 的信息。

```js fingerprint.config.js
const assert = require('node:assert');

const fileChunkMap = {};

/** @type {import('@expo/fingerprint').Config} */
const config = {
  fileHookTransform: (source, chunk, isEndOfFile, encoding) => {
    // 从应用配置中移除 "updates" 部分
    if (source.type === 'contents' && source.id === 'expoConfig') {
      assert(isEndOfFile, 'contents source is expected to have single chunk.');
      const config = JSON.parse(chunk);
      delete config.updates;
      return JSON.stringify(config);
    }

    // 将内容源转换为空字符串
    if (source.type === 'contents' && source.id === 'packageJson:scripts') {
      return '';
    }

    // 通过替换动态值来转换文件源
    if (source.type === 'file' && source.filePath === 'eas.json') {
      return chunk.toString().replace(/MyApp-Dev/g, 'MyApp');
    }

    // 转换一个以多个 chunk 处理的大文件
    // 为了获取完整文件，将所有 chunk 缓存起来并一次性返回
    if (source.type === 'file' && source.filePath === 'assets/large-image.jpg') {
      let receivedBuffer = fileChunkMap[source.filePath] ?? Buffer.alloc(0);
      if (chunk != null) {
        const buffer = typeof chunk === 'string' ? Buffer.from(chunk, encoding) : chunk;
        receivedBuffer = Buffer.concat([receivedBuffer, buffer]);
        fileChunkMap[source.filePath] = receivedBuffer;
      }
      if (!isEndOfFile) {
        return null;
      }
      fileChunkMap[source.filePath] = null;
      // 完整负载在这里可用，你可以按需要对其进行转换。
      receivedBuffer = receivedBuffer.toString().replace(/SensitiveData/g, 'StableData');
      return receivedBuffer;
    }

    // 对于其他源，直接返回 chunk
    return chunk;
  },
};

module.exports = config;
```

</Collapsible>

## 限制

<Collapsible summary={<>对 <CODE>@expo/config-plugins</CODE> 原始函数的支持有限</>}>

在使用带有原始函数的配置插件时，必须注意某些限制，尤其是在指纹生成的上下文中。该库会尽最大努力为通过配置插件所做的更改生成指纹；然而，原始函数会带来特定挑战。原始函数无法序列化为指纹，这意味着它们不能直接用于生成唯一哈希。

为了解决这一限制，该库会采用以下策略之一，为原始函数创建可序列化的指纹：

1. 使用 `Function.name`：对于具名原始函数，如果可用，库会使用 `Function.name` 属性。该属性提供了函数的可识别名称，可用作指纹属性。

2. 使用 `withAnonymous`：对于没有 `Function.name` 的匿名原始函数，库会改用 `withAnonymous` 作为指纹属性。这是用于匿名函数的通用标识符。

下面是一个示例，用于说明在某种情况下，库会使用 [`withMyPlugin`, `withAnonymous`] 作为插件属性进行指纹哈希：

{/* prettier-ignore */}
```js app.config.js
const { withInfoPlist } = require('expo/config-plugins');

const withMyPlugin = (config) => {
  return withInfoPlist(config, (config) => {
    config.modResults.NSLocationWhenInUseUsageDescription = '允许 $(PRODUCT_NAME) 使用你的位置信息';
    return config;
  });
};

export default ({ config }) => {
  config.plugins ||= [];
  config.plugins.push(withMyPlugin);
  config.plugins.push((config) => config);
  return config;
};
```

需要注意的是，由于这种设计，如果你修改原始配置插件函数的实现，例如更改 `withMyPlugin` 中的 **Info.plist** 值，指纹仍然会生成相同的哈希值。为了在修改配置插件实现时确保指纹唯一性，可以考虑以下选项：

- 避免匿名函数：避免使用匿名的原始配置插件函数。相反，尽可能使用具名函数，并确保只要实现发生变化，其名称保持一致。

- 使用本地配置插件：或者，你可以将本地配置插件作为单独的模块创建，每个模块都有自己的导出。这种方式允许你在修改配置插件实现时指定不同的函数名。

下面是一个使用本地配置插件的示例：

```js ./plugins/withMyPlugin.js
const { withInfoPlist } = require('expo/config-plugins');

const withMyPlugin = config => {
  return withInfoPlist(config, config => {
    config.modResults.NSLocationWhenInUseUsageDescription =
      '允许 $(PRODUCT_NAME) 使用你的位置信息';
    return config;
  });
};

module.exports = withMyPlugin;
```

{/* prettier-ignore */}
```json app.json
{
  "expo": {
    /* @hide ... */ /* @end */
    "plugins": "./plugins/withMyPlugin"
  }
}
```

通过遵循这些指南，你可以有效管理对配置插件的更改，并确保指纹生成保持一致且可靠。

</Collapsible>

## API

```ts
import * as Fingerprint from '@expo/fingerprint';
```

<APISection packageName="@expo/fingerprint" apiName="Fingerprint" />
